infra/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: k3s-cluster-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: DOCKER_HUB_USERNAME/k3s-cluster-demo_client
          resources:
            limits:
              memory: "64Mi"
              cpu: "0.25"
            requests:
              memory: "32Mi"
              cpu: "0.1"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: k3s-cluster-demo
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 80
      targetPort: 80
