infra/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: k3s-cluster-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: DOCKER_HUB_USERNAME/k3s-cluster-demo_server
          resources:
            limits:
              memory: "256Mi"
              cpu: "0.5"
            requests:
              memory: "128Mi"
              cpu: "0.25"
          livenessProbe:
            httpGet:
              path: /health
              port: 1337
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 1337
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: k3s-cluster-demo
spec:
  selector:
    app: server
  ports:
    - name: server
      protocol: TCP
      port: 1337
      targetPort: 1337
